--- a/styles.css
+++ b/styles.css
@@ -122,3 +122,26 @@ z-index: 100;
 .btn-box a:hover::before {
     width: 100%;
 }
+
+.home-socials {
+    position: absolute;
+    bottom: 40px;
+    width: 170px;
+    display: flex;
+    justify-content: space-between;
+}
+.home-socials a {
+    position: relative;
+    display: inline-flex;
+    justify-content: center;
+    align-content: center;
+    flex-wrap: wrap;
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    border: 2px solid #eb3571;
+    border-radius: 50%;
+    font-size: 20px;
+    color: #eb3571;
+    text-decoration: none;
+}
