--- a/styles.css
+++ b/styles.css
@@ -130,6 +130,7 @@ z-index: 100;
     display: flex;
     justify-content: space-between;
 }
+
 .home-socials a {
     position: relative;
     display: inline-flex;
@@ -144,4 +145,27 @@ z-index: 100;
     font-size: 20px;
     color: #eb3571;
     text-decoration: none;
+    z-index: 1;
+    overflow: hidden;
+    transition: .5s;
+}
+
+.home-socials a::before {
+    content: ' ';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: #eb3571;
+    z-index: -1;
+    transition: width .5s;
+}
+
+.home-socials a:hover {
+    color: #29001b;
+}
+
+.home-socials a:hover::before {
+    width: 100%;
 }
