--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,27 @@ display: flex;
 justify-content: space-between;
 z-index: 100;
 }
+/*optional logo styling: 
+
+.logo {
+position: relative;
+font-size: 25px;
+color: #eb3571;
+text-decoration: none;
+font-weight: 600;
+
+.logo::before {
+content: ' ';
+position: absolute;
+top: 0;
+right: 0;
+width: 100%;
+height: 100%;
+background: #29001b;
+animation: showRight 1s ease forwards;
+animation-delay: 0.4s;
+}
+*/
 
 #navbar a{
     font-size: 18px;
@@ -39,35 +60,98 @@ z-index: 100;
 
 /*welcome section*/
 #welcome-section {
+    /*add image as background:
+    background: url('#') no-repeat;
+    background-size: cover;
+    background-position: center;
+    (remove background  from body)*/
     height: 100vh;
     display:flex;
     align-items: center;
     padding: 0 10%;
 }
+
 .home-content {
     max-width: 600px;
 }
+
 .home-content h1 {
+    position: relative;
     font-size: 56px;
     font-weight: 700;
     line-height: 1.2;
 }
+
+.home-content h1::before {
+    content: ' ';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: #29001b;
+    animation: showRight 1s ease forwards;
+    animation-delay: 0.5s;
+    }
+
 .home-content h3 {
+    position: relative;
     font-size: 36px;
     font-weight: 700;
     color:#eb3571;
 }
+
+.home-content h3::before {
+    content: ' ';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: #29001b;
+    animation: showRight 1s ease forwards;
+    animation-delay: 1s;
+    }
+
 .home-content p {
+    position: relative;
     font-size: 16px;
     margin: 20px 0 40px;
     opacity: 0.8;
 }
+
+.home-content p::before {
+    content: ' ';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: #29001b;
+    animation: showRight 1s ease forwards;
+    animation-delay: 1.5s;
+    }
+
 .home-content .btn-box {
+    position: relative;
     width: 345px;
     height: 50px;
     display: flex;
     justify-content: space-between;
 }
+
+.home-content .btn-box::before {
+    content: ' ';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: #29001b;
+    animation: showRight 1s ease forwards;
+    animation-delay: 2s;
+    z-index: 2;
+    }
 
 .btn-box a {
     position: relative;
@@ -117,7 +201,7 @@ z-index: 100;
     background: #29001b;
     z-index: -1;
     transition: width .5s; /* Ensures smooth hover effect */
-    color: white;
+
 }
 
 .btn-box a:hover::before {
@@ -132,6 +216,20 @@ z-index: 100;
     justify-content: space-between;
 }
 
+.home-socials::before {
+    content: ' ';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: #29001b;
+    animation: showRight 1s ease forwards;
+    animation-delay: 2.5s;
+    z-index: -2;
+    }
+
+    /*socials Icons Styling*/
 .home-socials a {
     position: relative;
     display: inline-flex;
@@ -150,7 +248,7 @@ z-index: 100;
     overflow: hidden;
     transition: .5s;
 }
-
+/*hover effect on Social Icons*/
 .home-socials a::before {
     content: ' ';
     position: absolute;
@@ -169,4 +267,41 @@ z-index: 100;
 
 .home-socials a:hover::before {
     width: 100%;
+}
+/* home image:
+.home-imgHover {
+position: absolute;
+/* this position will place the span around my image
+top: 0;
+right: 30px;
+width: 500px;
+height: 100%;
+background: transparent;
+transition: 3s;
+}
+
+.home-imgHover :hover {
+background: #29001b;
+opacity: 0.8;
+
+.home-imgHover::after {
+    content: ' ';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 120%;
+    height: 100%;
+    background: #29001b;
+    animation: showRight 1s ease forwards;
+    animation-delay: 2.5s;
+    z-index: 100;
+    }
+*/
+
+
+/*KEYFRAMES ANIMATION: */
+@keyframes showRight {
+100% {
+width: 0;
+}
 }
