--- a/styles.css
+++ b/styles.css
@@ -18,12 +18,11 @@ body{
     left:0;
     width:100%;
 padding:20px 10%;
-background-color: transparent;
+background-color: #29001b;
 display: flex;
 justify-content: space-between;
 z-index: 100;
 }
-/*optional logo styling: 
 
 .logo {
 position: relative;
@@ -31,6 +30,7 @@ font-size: 25px;
 color: #eb3571;
 text-decoration: none;
 font-weight: 600;
+}
 
 .logo::before {
 content: ' ';
@@ -43,7 +43,6 @@ background: #29001b;
 animation: showRight 1s ease forwards;
 animation-delay: 0.4s;
 }
-*/
 
 #navbar a{
     font-size: 18px;
@@ -65,6 +64,7 @@ animation-delay: 0.4s;
     background-size: cover;
     background-position: center;
     (remove background  from body)*/
+    padding-top: 80px;
     height: 100vh;
     display:flex;
     align-items: center;
