--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,17 @@ body{
     color:#f8e4fc;
 }
 
+main {
+    padding: 0 10%;
+
+}
+
+h3 {
+    font-size: 36px;
+    font-weight: 700;
+    color:#eb3571;
+}
+
 
 /*Header Section*/
 .header {
@@ -68,7 +79,6 @@ animation-delay: 0.4s;
     height: 100vh;
     display:flex;
     align-items: center;
-    padding: 0 10%;
 }
 
 .home-content {
@@ -113,7 +123,7 @@ animation-delay: 0.4s;
     animation-delay: 1s;
     }
 
-.home-content p {
+.home-content p{
     position: relative;
     font-size: 16px;
     margin: 20px 0 40px;
@@ -297,6 +307,26 @@ opacity: 0.8;
     z-index: 100;
     }
 */
+
+/*About Me Section */
+
+#about {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100vh;
+  
+}
+
+ .about-me-content  {
+    max-width: 600px;
+}
+.about-me-content  p {
+    font-size: 16px;
+opacity: 0.8;
+margin: 20px 0 40px;
+
+}
 
 
 /*KEYFRAMES ANIMATION: */
