--- a/styles.css
+++ b/styles.css
@@ -349,8 +349,8 @@ margin: 20px 0 40px;
 
 /*Projects Section */
 .projects-section {
-    height: 100%vh;
-    padding: 40px;
+    height: 100vh;
+    padding: 50px;
     background-color: #29001b;
 }
 
@@ -412,6 +412,57 @@ margin: 20px 0 40px;
 .project-links a:hover {
     background: #eb3571;
 }
+
+
+/* Contact Form Styles */ 
+#communication {
+    height: 100vh;
+}
+
+#contact h2 {
+    text-align: center;
+    font-size: 2.5em;
+    margin-bottom: 20px;
+    color: #eb3571;
+}
+
+#contact form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 50px;
+    background: #fff;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    color: #29001b;
+}
+
+#contact input[type="email"],
+#contact input[type="submit"] {
+    width: 100%;
+    padding: 15px;
+    margin: 10px 0;
+    border: 2px solid #29001b;
+    border-radius: 5px;
+}
+
+#contact input[type="text"] {
+    padding: 100px;
+}
+
+
+#contact input[type="submit"] {
+    background: #29001b;
+    font-size: 1.5em;
+    color: #fff;
+    cursor: pointer;
+    transition: background 0.3s;
+}
+
+#contact input[type="submit"]:hover {
+    background: #eb3571;
+}
+
 
 
 
